Max height on textarea to avoid overflow

--- a/private/styles/main.scss
+++ b/private/styles/main.scss
@@ -222,6 +222,7 @@ img {
   textarea {
     width: 100%;
     max-width: $view-width;
+    max-height: 90vh;
   }
 
   li {
